err/shinkenplugins.plugins.drupal-security.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/shinkenplugins'...
Listing './lib/python3.5/site-packages/shinkenplugins/helpers'...
Listing './lib/python3.5/site-packages/shinkenplugins/helpers/argparse'...
Listing './lib/python3.5/site-packages/shinkenplugins/helpers/argparse/parsing'...
Listing './lib/python3.5/site-packages/shinkenplugins/plugins'...
Listing './lib/python3.5/site-packages/shinkenplugins/plugins/drupal_security'...
Compiling './lib/python3.5/site-packages/shinkenplugins/plugins/drupal_security/drupal_security.py'...
***   File "./lib/python3.5/site-packages/shinkenplugins/plugins/drupal_security/drupal_security.py", line 76
    except subprocess.CalledProcessError, e:
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/shinkenplugins/tools'...
Listing './lib/python3.5/site-packages/shinkenplugins/tools/tests'...
Listing './lib/python3.5/site-packages/shinkenplugins-0.4.2.egg-info'...
Listing './lib/python3.5/site-packages/shinkenplugins.plugins.drupal_security-1.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
